new branch is added to create-annotations-endpoint
