# src/server/api/controllers/annotations.controller.js
@@ -1,6 +1,20 @@
 "use strict";
 
 const knex = require("../../config/db");
+const createAnnotation = async body => {
+    console.log(body.created_at)
+    const [annotationId] = await knex("annotations").insert({
+        title: body.title,
+        area: JSON.stringify(body.area),
+        description: body.description,
+        fk_screenshot_id: body.fk_screenshot_id
+    });
+
+    return {
+        successful: true
+    };
+};
+
 const error = require("../lib/utils/http-error");
 
 const getAnnotations = async req => {
@@ -43,6 +57,7 @@ const getAnnotationsById = async id => {
 };
 
 module.exports = {
+  createAnnotation,
   getAnnotations,
   getAnnotationsById
 };
