# src/server/config/swagger.json
@@ -1,51 +1,95 @@
 {
-  "swagger": "2.0",
-  "info": {
-    "version": "1.0",
-    "title": "AnnotateTheWeb.API",
-    "description": "API documentation for the final project",
-    "contact": {}
-  },
-  "host": "",
-  "basePath": "/api",
-  "schemes": [
-    "http",
-    "https"
-  ],
-  "paths": {
-    "/screenshots/{key}": {
-      "get": {
-        "tags": [
-          "Screenshot"
-        ],
-        "summary": "Checks the status of a taken screenshot and returns information about the screenshot if it's ready.",
-        "operationId": "Screenshot_CheckStatusOnScreenshot",
-        "consumes": [],
-        "produces": [
-          "application/json",
-          "text/json",
-          "application/xml",
-          "text/xml"
-        ],
-        "parameters": [
-          {
-            "name": "key",
-            "in": "path",
-            "description": "The unique key for the screenshot",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "type": "object"
+    "swagger": "2.0",
+    "info": {
+        "version": "1.0",
+        "title": "AnnotateTheWeb.API",
+        "description": "API documentation for the final project",
+        "contact": {}
+    },
+    "host": "",
+    "basePath": "/api",
+    "schemes": [
+        "http",
+        "https"
+    ],
+    "paths": {
+        "/screenshots/{key}": {
+            "get": {
+                "tags": [
+                    "Screenshot"
+                ],
+                "summary": "Checks the status of a taken screenshot and returns information about the screenshot if it's ready.",
+                "operationId": "Screenshot_CheckStatusOnScreenshot",
+                "consumes": [],
+                "produces": [
+                    "application/json",
+                    "text/json",
+                    "application/xml",
+                    "text/xml"
+                ],
+                "parameters": [{
+                    "name": "key",
+                    "in": "path",
+                    "description": "The unique key for the screenshot",
+                    "required": true,
+                    "type": "string"
+                }],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
             }
-          }
-        }
-      }
+        },
+        "/annotations": {
+            "post": {
+                "tags": [
+                    "Annotations"
+                ],
+                "summary": "Create new annotation",
+                "consumes": [
+                    "application/json"
+                ],
+                "parameters": [{
+                    "name": "body",
+                    "in": "body",
+                    "description": "Create annotation",
+                    "required": true,
+                    "schema": {
+                        "type": "object",
+                        "required": [
+                            "title",
+                            "description",
+                            "area",
+                            "fk_screenshot_id"
+                        ],
+                        "properties": {
+                            "title": {
+                                "type": "string"
+                            },
+                            "description": {
+                                "type": "string"
+                            },
+                            "area": {
+                                "type": "object",
+                                "format": "object"
+                            },
+                            "fk_screenshot_id": {
+                                "type": "integer"
+                            }
+                        }
+                    }
+                }],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    }
+                }
+            }
+        },
+        "definitions": {}
     }
-  },
-  "definitions": {}
 }
